fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -724,6 +724,10 @@ textarea {
 	color: #353535;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.4em 1em 0.4em 0;
 	padding: 0;
